@@ -1,1 +1,2 @@
 DIST redmine_git_hosting-0.7.2.tar.gz 506057 SHA256 cc1f1edb272fdfd9a108d0ca9a4df4c18e70aded79b4a2dac8f7690ded55d4ad SHA512 7aa220bbf6441d9ba48f75b3e2d8da475c52c081ad5b24d7be9e08ff03bd79ef71638edd886ccc98e9092494125caaf61b60c96fde20c257f80c40abce0037f4 WHIRLPOOL 65da5f379912240bb5ff5a51157d1764bddb1153cf27aa613b7dc72492c4fe9448a9857aaa66e586186c832b01c1a2eb0f7f2364043aa00249b1a3644c94f8f5
+DIST redmine_git_hosting-0.7.3.tar.gz 506647 SHA256 e1afe1ded0c2ce5b4fa20ae8548a76c89584c3ae089c4273bc0af3c5dbcc7376 SHA512 abafeb410e2d815ca9e7317b78a22321814623cb8c94345b1e1ab324e818170e07c7802b22458bbfbafd6b5d2bdb4be730bca8aa006439b7ac3a08e64ffe4273 WHIRLPOOL c5c5562f07e406da07396f61e44de3aff28563f49689b1d49e60fa95d857539de23037c58d36f87dca08876d7e9e1f691b41d58c644cd6e3acb75f62ae689a8a
