@@ -1,3 +1,9 @@
+*redmine_git_hosting-0.7.3 (11 Jun 2014)
+
+  11 Jun 2014; Manuel Rüger <mrueg@gentoo.org>
+  +redmine_git_hosting-0.7.3.ebuild:
+  [www-apps/redmine_git_hosting] Version bump.
+
   22 Apr 2014; Manuel Rüger <mrueg@gentoo.org> redmine_git_hosting-0.7.2.ebuild:
   [www-apps/redmine_git_hosting] Remove .gitignore.
 
